--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
 	<h1>Hello World</h1>
+	<audio controls autoplay loop>
+		<source src="Friends_Are_For.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+	</audio>
 </body>
 </html>
